修改格式文件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,24 @@
   "files.associations": {
     "pages.json": "jsonc", // pages.json 可以写注释
     "manifest.json": "jsonc" // manifest.json 可以写注释
-  }
+  },
+  "cSpell.words": [
+    "automator",
+    "autoscan",
+    "dcloudio",
+    "easycom",
+    "kuaishou",
+    "miniprogram",
+    "Parens",
+    "persistedstate",
+    "pinia",
+    "quickapp",
+    "rushstack",
+    "Scrolltolower",
+    "stacktracey",
+    "stylelint",
+    "toutiao",
+    "weixin",
+    "xiaotuxian"
+  ]
 }
