--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,25 +11,52 @@
     "manifest.json": "jsonc" // manifest.json 可以写注释
   },
   "cSpell.words": [
+    "actived",
+    "appstore",
+    "autofocus",
     "automator",
     "autoscan",
     "catchtouchmove",
     "composables",
     "dcloudio",
     "easycom",
+    "echart",
+    "echarts",
+    "efae",
+    "FILESYSTEMS",
+    "Getphonenumber",
+    "hdpi",
+    "horizonal",
+    "inited",
     "kuaishou",
+    "liquidfill",
+    "Localdata",
     "miniprogram",
+    "mpvue",
+    "mutli",
+    "nvue",
     "Parens",
     "persistedstate",
     "pinia",
+    "proapp",
     "quickapp",
+    "Refresherrefresh",
     "rushstack",
     "Scrolltolower",
+    "scrolltoupper",
+    "splashscreen",
     "stacktracey",
     "stylelint",
+    "swiky",
     "toutiao",
+    "uniapp",
+    "unpackage",
+    "vite",
     "Wechat",
     "weixin",
-    "xiaotuxian"
+    "xhdpi",
+    "xiaotuxian",
+    "xxhdpi",
+    "xxxhdpi"
   ]
 }
