--- a/package.json
+++ b/package.json
@@ -61,10 +61,13 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-alpha-3081220230802001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3081220230802001",
     "@dcloudio/uni-ui": "^1.5.2",
+    "echarts": "^5.5.0",
     "pinia": "2.0.27",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "tslib": "^2.6.2",
     "vue": "^3.4.21",
-    "vue-i18n": "^9.10.1"
+    "vue-i18n": "^9.10.1",
+    "zrender": "^5.5.0"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
