--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,15 +5,11 @@
     "sourceMap": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@": ["src"],
+      "@/*": ["src/*"]
     },
     "lib": ["esnext", "dom"],
-    "types": [
-      "@dcloudio/types",
-      "miniprogram-api-typings",
-      "@uni-helper/uni-app-types",
-      "@uni-helper/uni-ui-types"
-    ]
+    "types": ["@dcloudio/types", "miniprogram-api-typings", "@uni-helper/uni-app-types", "@uni-helper/uni-ui-types"]
   },
   // 校验 uni-app 组件类型
   "vueCompilerOptions": {
