--- a/.env.production
+++ b/.env.production
@@ -22,7 +22,7 @@ VITE_DROP_CONSOLE = true
 VITE_PWA = true
 
 # 线上环境图片地址
-VITE_IMG_BASE_URL = "https://www.5xdanhao.com//images/appresource"
+VITE_IMG_BASE_URL = "https://apitest.ukynda.com/images/appresource"
 
 # 线上环境接口地址
-VITE_API_URL = "https://www.5xdanhao.com/app"
+VITE_API_URL = "https://apitest.ukynda.com/app"
